--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,16 @@ jobs:
           steps:
             - run: npm install
             - run: npm test
+ build-and-test:
+    executor:
+      name: node/default
+    steps:
+      - checkout
+      - node/with-cache:
+          steps:
+            - run: npm install
+            - run: npm run build
 workflows:
-    build-and-test:
+    build-and-run:
       jobs:
-        - build-and-test
+        - build-and-run
