--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           steps:
             - run: npm install
             - run: npm test
- build-and-test:
+ build-and-run:
     executor:
       name: node/default
     steps:
