--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           steps:
             - run: npm install
             - run: npm run build
- - aws-s3/copy:
+ aws-s3/copy:
           arguments: '--dry-run'
           from: bucket/build_asset.txt
           to: 's3://my-s3-bucket-name'
