--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,19 +2,20 @@ version: 2.1
 orbs:
   node: circleci/node@1.1.6
 jobs:
- build-and-run:
-    executor:
-      name: node/default
-    steps:
-      - checkout
-      - node/with-cache:
-          steps:
-            - run: npm install
-            - run: npm run build
- store_artifacts:
-          path: /home/circleci/project
-workflows:
-    build-and-run:
-      jobs:
-        - build-and-run
-        - store_artifacts
+  build:
+      docker:
+        - image: python:3.6.3-jessie
+        
+      working_directory: /tmp
+        steps:
+         - build-and-run:
+            executor:
+              name: node/default
+            steps:
+              - checkout
+              - node/with-cache:
+                  steps:
+                    - run: npm install
+                    - run: npm run build
+         - store_artifacts:
+                  path: /tmp
