--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,12 +12,11 @@ jobs:
           steps:
             - run: npm install
             - run: npm run build
-  aws-s3/copy:
-          arguments: '--dry-run'
-          from: bucket/build_asset.txt
-          to: 's3:/cicd-hackney-works-theme-artifact'
 workflows:
     build-and-run:
       jobs:
         - build-and-run
-        - aws-s3/copy
+        - aws-s3/copy:
+            arguments: '--dry-run'
+            from: bucket/build_asset.txt
+            to: 's3:/cicd-hackney-works-theme-artifact'
