--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,8 +17,7 @@ jobs:
       - image: cimg/python:3.6
     steps:
       - aws-s3/copy: #invokes the sync command declared in the s3 orb
-          arguments: '--dry-run'
-          from: bucket/build_asset.txt
+          from: /home/circleci/project
           to: 's3:/cicd-hackney-works-theme-artifact'
           aws-access-key-id: AWS_ACCESS_KEY_ID
           aws-secret-access-key: AWS_SECRET_ACCESS_KEY
