--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,12 +12,17 @@ jobs:
           steps:
             - run: npm install
             - run: npm run build
+      - persist_to_workspace:
+          root: /home/circleci
+          path: project
  deploy2s3: 
     docker: 
       - image: cimg/python:3.6
     steps:
+      - attach_workspace:
+          at: /tmp/workspace
       - aws-s3/copy: #invokes the sync command declared in the s3 orb
-          from: /home/circleci/project
+          from: /tmp/workspace
           to: 's3://cicd-hackney-works-theme-artifact'
           aws-access-key-id: AWS_ACCESS_KEY_ID
           aws-secret-access-key: AWS_SECRET_ACCESS_KEY
