--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
             - run: npm install
             - run: npm run build
       - persist_to_workspace:
-          root: /home/circleci
+          root: /home/circleci/
           path: project
  deploy2s3: 
     docker: 
