--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
             - run: npm run build
       - persist_to_workspace:
           root: /home/circleci/
-          path: project/
+          path: *
  deploy2s3: 
     docker: 
       - image: cimg/python:3.6
