--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,6 @@ workflows:
     build-and-deploy:
       jobs:
         - build-and-run
-        - deploy2s3
+        - deploy2s3:
             requires:
               - build-and-run
